@@ -1,2 +1,6 @@
 [run]
 source = z3c.batching
+branch = True
+
+[report]
+precision = 2
