@@ -5,7 +5,9 @@ CHANGES
 2.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add support for Python 3.6, 3.7 and PyPy3.
+
+- Drop support for Python 2.6 and 3.3.
 
 
 2.1.0 (2016-06-05)
